# datadiagnose

./: .flake8  .gitignore  LICENSE  README.md  flake8  pyproject.toml  verify_config_v104.py
.github/workflows/: tests.yml
datadiagnose/: __init__.py  core.py  detectors.py  models.py  utils.py
examples/: basic_usage.py  pandas_integration.py  student_dataset_demo.py
tests/: __init__.py  sample_data.py  test_core.py  test_detectors.py
