# pyproject.toml
# ==============================================================
# DataDiagnose — Package Configuration
#
# This file tells Python's build system everything it needs to
# know to build and publish DataDiagnose to PyPI.
#
# After filling this in, anyone in the world can install your
# library with:
#     pip install datadiagnose
#
# To publish:
#     pip install build twine
#     python -m build
#     twine upload dist/*
#
# Author  : Nilotpal Dhar
# License : MIT
# ==============================================================


# ── Build system ─────────────────────────────────────────────
# Tells pip which backend to use to build the package.
# setuptools is the standard, most widely supported choice.
[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ── Project metadata ─────────────────────────────────────────
[project]

# The name as it appears on PyPI and in pip install commands.
# Must be unique across all of PyPI.
# Hyphens and underscores are interchangeable in pip,
# but the canonical name here uses hyphens.
name = "datadiagnose"

# Semantic versioning: MAJOR.MINOR.PATCH
# MAJOR: breaking changes (1.x.x → 2.x.x)
# MINOR: new features, backward compatible (1.0.x → 1.1.x)
# PATCH: bug fixes (1.0.0 → 1.0.1)
version = "1.0.1"

# One-line description shown on the PyPI search results page.
description = "Dataset Auto-Diagnosis Python Library — find and fix data problems before model training."

# Longer description — the README.md will be used as the
# full description shown on the PyPI package page.
readme = "README.md"

# Minimum Python version required to use DataDiagnose.
# We support 3.7+ because that is when f-strings became stable
# and it covers most users still on older systems.
requires-python = ">=3.7"

# License identifier — must match the LICENSE file.
license = {text = "MIT"}

# Authors list — your name and email.
# Email is optional but recommended for PyPI contact.
authors = [
    {name = "Nilotpal Dhar", email = "dharnilotpal31@gmail.com"}
]

# Maintainers (can be same as authors for a solo project)
maintainers = [
    {name = "Nilotpal Dhar", email = "dharnilotpal31@gmail.com"}
]

# Keywords — help people find your package on PyPI search.
keywords = [
    "data science",
    "machine learning",
    "dataset",
    "data quality",
    "data cleaning",
    "eda",
    "exploratory data analysis",
    "missing values",
    "outliers",
    "data leakage",
    "class imbalance",
    "python",
    "beginner",
]

# Classifiers — standardised tags PyPI uses to categorise packages.
# Full list: https://pypi.org/classifiers/
classifiers = [
    # Development status
    "Development Status :: 4 - Beta",

    # Intended audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",

    # Topic
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # License
    "License :: OSI Approved :: MIT License",

    # Python versions supported
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    # Operating systems
    "Operating System :: OS Independent",

    # Typing
    "Typing :: Typed",
]

# Runtime dependencies.
# DataDiagnose uses ZERO external dependencies — only
# Python's built-in standard library (math, statistics,
# collections). This is intentional: it makes the library
# lightweight and installable everywhere without conflicts.
dependencies = []


# ── Optional dependencies ─────────────────────────────────────
# These are not required but can be installed for extra features.
# Install with: pip install datadiagnose[dev]
[project.optional-dependencies]

# Development tools — needed to run tests and check code style
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]

# Data science ecosystem — needed for the pandas examples
# (not needed for the core library itself)
data = [
    "pandas>=1.3",
    "numpy>=1.21",
]

# Everything — install all optional dependencies at once
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "pandas>=1.3",
    "numpy>=1.21",
]


# ── Project URLs ──────────────────────────────────────────────
# These appear as links on the PyPI page.
[project.urls]
Homepage      = "https://github.com/nilotpaldhar2004/datadiagnose"
Repository    = "https://github.com/nilotpaldhar2004/datadiagnose"
Documentation = "https://github.com/nilotpaldhar2004/datadiagnose/blob/main/README.md"
"Bug Tracker" = "https://github.com/nilotpaldhar2004/datadiagnose/issues"


# ── Package discovery ─────────────────────────────────────────
# Tells setuptools which folders contain Python packages to
# include in the distribution.
[tool.setuptools.packages.find]
# Only include the main package and its subpackages.
# Do NOT include tests/ or examples/ in the published package.
include = ["datadiagnose*"]
exclude = ["tests*", "examples*", "docs*"]


# ── pytest configuration ──────────────────────────────────────
# Settings for running tests with pytest.
[tool.pytest.ini_options]

# Where to find the tests
testpaths = ["tests"]

# Default options passed to every pytest run
addopts = [
    "--tb=short",        # shorter traceback format
    "--strict-markers",  # error on unknown @pytest.mark decorators
    "-v",                # verbose: show each test name
]

# Custom markers (used to tag tests with @pytest.mark.xxx)
markers = [
    "slow: marks tests as slow (run with -m slow)",
    "integration: marks integration tests",
    "unit: marks unit tests",
]


# ── Coverage configuration ─────────────────────────────────────
# Settings for pytest-cov (code coverage measurement).
[tool.coverage.run]
source  = ["datadiagnose"]
omit    = ["tests/*", "examples/*", "setup.py"]
branch  = true

[tool.coverage.report]
# Show lines that are not covered by any test
show_missing = true
# Fail the coverage check if coverage drops below this percentage
fail_under   = 80
# Exclude these patterns from coverage measurement
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]


# ── flake8 configuration ──────────────────────────────────────
# Code style settings. flake8 checks PEP 8 compliance.
# Note: flake8 reads from setup.cfg or .flake8, not pyproject.toml
# (legacy limitation). These are shown here for reference —
# create a .flake8 file in the project root with the same settings.
#
# [flake8]
# max-line-length = 100
# exclude = __pycache__, .git, dist, build, *.egg-info
# extend-ignore = E203, W503
