# ==============================================================
# DataDiagnose — Package Configuration (v1.0.1)
# ==============================================================

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ── Project metadata ─────────────────────────────────────────
[project]
name = "datadiagnose"
version = "1.0.1"
description = "Dataset Auto-Diagnosis Python Library — find and fix data problems before model training."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Nilotpal Dhar", email = "dharnilotpal31@gmail.com"}
]
maintainers = [
    {name = "Nilotpal Dhar", email = "dharnilotpal31@gmail.com"}
]
keywords = [
    "data science", "machine learning", "dataset", "data quality",
    "data cleaning", "eda", "missing values", "outliers"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

# Core library has ZERO dependencies
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]
data = [
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.urls]
Homepage      = "https://github.com/nilotpaldhar2004/datadiagnose"
Repository    = "https://github.com/nilotpaldhar2004/datadiagnose"
Documentation = "https://github.com/nilotpaldhar2004/datadiagnose/blob/main/README.md"
"Bug Tracker" = "https://github.com/nilotpaldhar2004/datadiagnose/issues"

# ── Package discovery ─────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["datadiagnose*"]
exclude = ["tests*", "examples*", "docs*"]

# ── pytest configuration ──────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "--strict-markers", "-v"]

# ── Coverage configuration ─────────────────────────────────────
[tool.coverage.run]
source  = ["datadiagnose"]
omit    = ["tests/*", "examples/*"]
branch  = true

[tool.coverage.report]
show_missing = true
fail_under   = 80